--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jonas sin nettside</title>
+    <link
+      rel="icon"
+      href="https://github.com/Jonas-Kodehode/HTML-CSS-Assignment/blob/main/bilder/Black_Cat_Vector.svg.png?raw=true"
+    />
   </head>
   <body></body>
 </html>
