Pictures and changes

--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jonas sin nettside</title>
     <link
       rel="icon"
       href="https://github.com/Jonas-Kodehode/HTML-CSS-Assignment/blob/main/bilder/Black_Cat_Vector.svg.png?raw=true"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Hedvig+Letters+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>Jonas sin nettside</title>
   </head>
-  <body></body>
+  <body>
+    <h1>This is my website, look at all the stuff I can do</h1>
+    <ul>
+      <li>Today I would like to show you what I can do with HTML & CSS</li>
+      <li id="white-bg">
+        First of all let's make this text with a white background instead
+      </li>
+      <li>And then I would like to add a picture of my cats</li>
+    </ul>
+    <img src="" alt="" />
+  </body>
 </html>
