final init i think

--- a/index.html
+++ b/index.html
@@ -26,6 +26,27 @@
       </li>
       <li>And then I would like to add a picture of my cats</li>
     </ul>
-    <img src="" alt="" />
+    <img
+      class="resize"
+      src="https://github.com/Jonas-Kodehode/HTML-CSS-Assignment/blob/main/bilder/lucy-bilde.JPG?raw=true"
+      alt="My cat"
+    />
+    <p class="navn">Lucy</p>
+    <img
+      class="resize"
+      id="akira"
+      src="https://github.com/Jonas-Kodehode/HTML-CSS-Assignment/blob/main/bilder/akira-bilde.JPG?raw=true"
+      alt="My other cat"
+    />
+    <p class="navn">Akira</p>
+    <li>And yeah I know, they are amazingly cute!</li>
+    <p class="border">
+      And then I would like to make a border around this text
+    </p>
+    <li>Then I will make a box for you to write your name in!</li>
+    <div class="btnsubmit">
+      <input type="text" placeholder="Enter your name here" />
+      <button>Submit absolutely nothing</button>
+    </div>
   </body>
 </html>
