this is the last one

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <li id="white-bg">
         First of all let's make this text with a white background instead
       </li>
+      <li id="green-txt">And then I would like to make this text greenish</li>
       <li>And then I would like to add a picture of my cats</li>
     </ul>
     <img
