This is actually the last one

--- a/index.html
+++ b/index.html
@@ -18,7 +18,20 @@
     <title>Jonas sin nettside</title>
   </head>
   <body>
-    <h1>This is my website, look at all the stuff I can do</h1>
+    <h1 class="font">This is my website, look at all the stuff I can do</h1>
+    <div class="navbar">
+      <ul class="navbar-items">
+        <li>Home</li>
+        <li>About</li>
+        <li>FAQ</li>
+        <li>Contacts</li>
+        <li>
+          <a target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+            Sexy pics</a
+          >
+        </li>
+      </ul>
+    </div>
     <ul>
       <li>Today I would like to show you what I can do with HTML & CSS</li>
       <li id="white-bg">
