Okay this is literally the last one, coz im tired

--- a/index.html
+++ b/index.html
@@ -18,49 +18,55 @@
     <title>Jonas sin nettside</title>
   </head>
   <body>
-    <h1 class="font">This is my website, look at all the stuff I can do</h1>
-    <div class="navbar">
-      <ul class="navbar-items">
-        <li>Home</li>
-        <li>About</li>
-        <li>FAQ</li>
-        <li>Contacts</li>
-        <li>
-          <a target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-            Sexy pics</a
-          >
+    <div class="center-align">
+      <h1 class="font">This is my website, look at all the stuff I can do</h1>
+      <div class="navbar">
+        <ul class="navbar-items">
+          <li>Home</li>
+          <li>About</li>
+          <li>FAQ</li>
+          <li>Contacts</li>
+          <li>
+            <a
+              target="_blank"
+              href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+            >
+              Sexy pics</a
+            >
+          </li>
+        </ul>
+      </div>
+      <ul>
+        <li>Today I would like to show you what I can do with HTML & CSS</li>
+        <li id="white-bg">
+          First of all let's make this text with a white background instead
         </li>
+        <li id="green-txt">And then I would like to make this text greenish</li>
+        <li>And then I would like to add a picture of my cats</li>
       </ul>
-    </div>
-    <ul>
-      <li>Today I would like to show you what I can do with HTML & CSS</li>
-      <li id="white-bg">
-        First of all let's make this text with a white background instead
-      </li>
-      <li id="green-txt">And then I would like to make this text greenish</li>
-      <li>And then I would like to add a picture of my cats</li>
-    </ul>
-    <img
-      class="resize"
-      src="https://github.com/Jonas-Kodehode/HTML-CSS-Assignment/blob/main/bilder/lucy-bilde.JPG?raw=true"
-      alt="My cat"
-    />
-    <p class="navn">Lucy</p>
-    <img
-      class="resize"
-      id="akira"
-      src="https://github.com/Jonas-Kodehode/HTML-CSS-Assignment/blob/main/bilder/akira-bilde.JPG?raw=true"
-      alt="My other cat"
-    />
-    <p class="navn">Akira</p>
-    <li>And yeah I know, they are amazingly cute!</li>
-    <p class="border">
-      And then I would like to make a border around this text
-    </p>
-    <li>Then I will make a box for you to write your name in!</li>
-    <div class="btnsubmit">
-      <input type="text" placeholder="Enter your name here" />
-      <button>Submit absolutely nothing</button>
+      <img
+        class="resize"
+        src="https://github.com/Jonas-Kodehode/HTML-CSS-Assignment/blob/main/bilder/lucy-bilde.JPG?raw=true"
+        alt="My cat"
+      />
+      <p class="navn">Lucy</p>
+      <img
+        class="resize"
+        id="akira"
+        src="https://github.com/Jonas-Kodehode/HTML-CSS-Assignment/blob/main/bilder/akira-bilde.JPG?raw=true"
+        alt="My other cat"
+      />
+      <p class="navn">Akira</p>
+      <li>And yeah I know, they are amazingly cute!</li>
+      <p class="border">
+        And then I would like to make a border around this text
+      </p>
+      <li>Then I will make a box for you to write your name in!</li>
+
+      <div class="btnsubmit">
+        <input type="text" placeholder="Enter your name here" />
+        <button>Submit absolutely nothing</button>
+      </div>
     </div>
   </body>
 </html>
